# sentori

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP-PHASE-50.md  ROADMAP.md  docker-compose.yml  package.json
cli/: Cargo.toml  README.md
cli/npm/: README.md  package.json
cli/src/: admin.rs  issue.rs  main.rs
saas/server/: Cargo.toml
saas/server/src/: auth_mw.rs  main.rs  state.rs  stripe.rs  tenant_provision.rs
saas/server/src/handlers/: health.rs  mod.rs  saasadmin.rs  stripe_webhook.rs  tenants.rs
server/: .env.example  Cargo.toml  README.md  build.rs
server/crates/core/: Cargo.toml  build.rs
server/crates/core/migrations/: 0001_init.sql  0002_issues.sql  0005_release_artifacts.sql  0006_notifications.sql  0007_multi_tenant.sql  0008_tokens_meta.sql  0012_viewer_role.sql  0015_proguard_mappings.sql  0016_releases_deploy_at.sql  0017_issue_regression.sql  0018_saved_views.sql  0019_issue_comments.sql  0022_alert_rules.sql  0023_digest_subscriptions.sql  0024_alert_rule_mute.sql  0025_webhook_deliveries.sql  0026_spans.sql  0028_event_trace.sql  0032_event_attachments.sql  0034_issues_fulltext.sql  0035_event_attachments_session_trail.sql  0036_user_reports.sql  0037_metrics.sql  0038_cert_monitor.sql  0045_users_superadmin.sql  0046_track_events.sql  0047_security_events.sql  0048_user_federation_links.sql  0049_activity_log.sql  0053_integration_link_metadata.sql  0054_integrations_more_kinds.sql  0055_integration_config_default_modes.sql  0056_notification_preferences.sql  0057_release_artifacts_metadata.sql  0058_notifications_email_log.sql  0059_digest_runs.sql  0060_issue_user_mutes.sql  0062_source_bundle_multi.sql  0063_integration_templates.sql  0064_events_level_message.sql  (+12 more)
server/crates/core/src/: activity_log.rs  attachments.rs  auth.rs  cert_monitor.rs  correlation_id.rs  digest.rs  error_envelope.rs  event.rs  geoip.rs  grouping.rs  identity.rs  live_presence.rs  metrics_partition.rs  notification_email.rs  notifications.rs  passwd.rs  quotas.rs  rate_limit.rs  recent.rs  regression.rs  roles.rs  router.rs  rule_eval.rs  seed.rs  session.rs  symbolicate.rs  symbolicate_android.rs  trace_emit.rs  tracing_middleware.rs  valkey.rs  velocity.rs  webhook_dispatch.rs
server/crates/core/src/api/: alert_rules.rs  audience_metrics.rs  behavior.rs  cert_monitor.rs  digests.rs  endpoint_checks.rs  events.rs  federation.rs  health.rs  live.rs  mappings.rs  mod.rs  moments.rs  oauth.rs  projects.rs  push.rs  repro.rs  search.rs  security.rs  self_test.rs  sessions.rs  tokens.rs  track.rs  trust_score.rs  user_reports.rs  views.rs  vitals.rs  workspace.rs
server/crates/core/src/integrations/: dispatch.rs  github.rs  gitlab.rs  jira.rs  linear.rs
server/crates/core/src/push/: dispatch_cron.rs  expo_compat.rs  quarantine.rs  retry.rs  tokens.rs  (+2 more)
server/crates/saas/: Cargo.toml
server/crates/saas/migrations/: 0001_tenants.sql
server/crates/saas/src/: lib.rs
server/migrations/: 0003_partition_events.sql  0004_issue_denorm.sql  0009_quotas.sql  0010_phase18_orgs.sql  0011_invite_team.sql  0013_audit_tombstone.sql  0014_dsyms.sql  0020_issue_assignee.sql  0021_sessions.sql  0027_trace_meta.sql  0029_trace_retention.sql  0030_spans_op_duration_idx.sql  0031_projects_source_repo_url.sql  0033_integrations.sql  0039_velocity_state.sql  0040_events_bundle_idx.sql  0041_pii_findings.sql  0042_culprit_commits.sql  0043_attachments_replay_kind.sql  0044_user_profile_and_password_resets.sql  0050_issues_priority_labels.sql  0051_issue_status_muted.sql  0052_watchers_notifications.sql  0061_org_labels.sql  0068_runtime_metrics.sql  0072_endpoint_probe_rollup.sql  0078_push_delivery_logs.sql  0079_push_sends_campaign_audience.sql  0080_push_sends_ack.sql  0081_device_topics.sql  0082_push_preferences.sql
server/scripts/: dev-up.sh
server/src/: attachments.rs  audit.rs  auth.rs  db.rs  endpoint_probe.rs  error.rs  event.rs  geoip.rs  grouping.rs  identity.rs  issues.rs  lib.rs  mailer.rs  main.rs  metrics.rs  metrics_rollup.rs  notification_digest.rs  notifier.rs  privacy_lab.rs  quotas.rs  rate_limit.rs  recent.rs  retention.rs  router.rs  secrets.rs  seed.rs  source_bundle.rs  symbolicate.rs  symbolicate_android.rs  symbolicate_ios.rs  valkey.rs  webhook.rs
server/src/api/: admin.rs  admin_auth.rs  alert_rules.rs  attachments.rs  culprits.rs  deploys.rs  dsyms.rs  endpoint_checks.rs  events.rs  events_batch.rs  events_stream.rs  health.rs  heartbeat.rs  integrations.rs  live_debug.rs  mappings.rs  metrics.rs  mod.rs  oauth.rs  orgs.rs  privacy.rs  projects.rs  push.rs  recent.rs  recipients.rs  releases.rs  runtime_metrics.rs  runtime_metrics_query.rs  source_bundle.rs  spans.rs  superadmin.rs  teams.rs  tokens.rs  traces.rs  user_auth.rs
server/src/api/admin/: activity.rs  explore.rs  frame_source.rs  identity_lookup.rs  identity_merge.rs  issues.rs  labels.rs  mod.rs  refingerprint.rs  users_detail.rs  users_overview.rs
server/src/api/orgs/: mod.rs  transfer.rs
server/src/api/teams/: mod.rs
server/src/api/user_auth/: password.rs  profile.rs
server/src/integrations/: dispatch.rs  linear.rs  mod.rs  slack.rs
server/src/push/: delivery.rs  dispatch_cron.rs  expo_compat.rs  health.rs  mod.rs  rate_limit.rs  send.rs  send_gate.rs  types.rs
server/src/push/providers/: apns.rs  fcm.rs  hcm.rs  mipush.rs  mod.rs  webpush.rs
server/tests/: account.rs  activity_log.rs  alert_rules.rs  alert_rules_eval.rs  alert_rules_mute.rs  attachment_retention.rs  audience_metrics.rs  behavior.rs  bulk_patch_issues.rs  correlation_id.rs  db_test.rs  deploys.rs  digests.rs  dsyms.rs  error_shape.rs  federation.rs  github_webhook.rs  gitlab_jira_webhooks.rs  health_query.rs  invite_team.rs  issue_activity.rs  issue_assignee.rs  issue_muted.rs  issue_priority_labels.rs  linear_webhook_metadata.rs  list_issues_filters.rs  notifications.rs  post_event.rs  proguard_mappings.rs  regression.rs  release_compare.rs  saved_views.rs  search.rs  security_report.rs  self_test.rs  sessions.rs  source_bundle_lookup.rs  source_bundle_upload.rs  sourcemap_status.rs  teams.rs  (+12 more)
(+1050 files in other folders)
