[package]
name = "sentori-cli"
version = "0.1.0"
edition = "2024"
description = "Sentori CLI — upload source maps and other release artifacts"
license = "TBD"
publish = false

[[bin]]
name = "sentori-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["multipart", "rustls-tls", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
