[package]
name = "sentori-server"
version = "0.1.0"
edition = "2024"
description = "Sentori ingestion server (axum + Postgres + Valkey)"
license = "TBD"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "sentori-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
time = { version = "0.3", features = ["serde-well-known"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
validator = { version = "0.20", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "time", "json", "macros"] }
sha2 = "0.10"
hex = "0.4"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
axum-extra = { version = "0.10", features = ["cookie"] }
hmac = "0.12"
sourcemap = "9"
# Phase 22 sub-B: iOS DWARF symbolication. atos is macOS-only — we use
# pure-Rust addr2line + object so resolution works on the Linux
# production server. addr2line returns a parsed Context that maps
# instruction addresses to function/file/line via the DWARF embedded
# in the dSYM's Mach-O.
addr2line = { version = "0.24", default-features = false, features = ["rustc-demangle", "cpp_demangle", "fallible-iterator", "smallvec", "loader"] }
object = { version = "0.36", default-features = false, features = ["read", "macho", "std"] }
# Phase 22 sub-C: Android ProGuard / R8 mapping retrace. Sentry's
# `proguard` crate handles the full mapping format including R8's
# inline-method expansion and synthesised line ranges.
proguard = "5"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
argon2 = "0.5"
rand = "0.8"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
regex = "1.12.3"
# Phase 27 sub-D: outbound webhook delivery. rustls-tls so we don't
# pull a system OpenSSL into the prod image.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }
# v0.4 CI fix: alert_rules_eval tests share one Postgres DB. When cargo
# test runs them in parallel, sweep_once from test A claims rule_B's
# throttle window before test B's sweep can. Serialize the three tests
# to avoid that race; production code is not affected.
serial_test = "3"
