[package]
name = "sentori-server"
# v2.20: single source of truth is the repo-root `VERSION` file.
# `build.rs` reads it and panics the build if this `version` field
# drifts. `web/vite.config.ts` does the symmetrical check against
# `web/package.json`. Bump all three together; the build will not
# let you ship a mismatch.
# Prior incident: 2026-05-22 server held rc.1 while dashboard
# displayed v1.1.0, confusing operators about what was deployed.
version = "1.4.2"
edition = "2024"
authors = ["GOLIA K.K. <takagi@golia.jp>"]
description = "Sentori ingestion server (axum + Postgres + Valkey)"
license = "Apache-2.0 OR MIT"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "sentori-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
# Phase 50 sub-A1 — SSE feed needs tokio-stream + futures for the
# broadcast → axum::sse adapter.
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
time = { version = "0.3", features = ["serde-well-known"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
validator = { version = "0.20", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "time", "json", "macros"] }
sha2 = "0.10"
hex = "0.4"
redis = { version = "1", features = ["tokio-comp", "connection-manager"] }
axum-extra = { version = "0.12", features = ["cookie"] }
hmac = "0.12"
sourcemap = "9"
# Phase 22 sub-B: iOS DWARF symbolication. atos is macOS-only — we use
# pure-Rust addr2line + object so resolution works on the Linux
# production server. addr2line returns a parsed Context that maps
# instruction addresses to function/file/line via the DWARF embedded
# in the dSYM's Mach-O.
addr2line = { version = "0.26", default-features = false, features = ["rustc-demangle", "cpp_demangle", "fallible-iterator", "smallvec", "loader"] }
object = { version = "0.39", default-features = false, features = ["read", "macho", "std"] }
# Phase 22 sub-C: Android ProGuard / R8 mapping retrace. Sentry's
# `proguard` crate handles the full mapping format including R8's
# inline-method expansion and synthesised line ranges.
proguard = "5"
# v0.8.0-d — GeoIP lookup at ingest time. `maxminddb` reads the
# `.mmdb` binary format that MaxMind GeoLite2 + DB-IP Lite both ship
# in. The reader is lock-free for reads, fits behind an Arc with no
# wrapper. Default is the country-only DB-IP Lite (CC-BY 4.0, no
# license key); operators can swap in GeoLite2 city without code
# change by pointing `SENTORI_GEOIP_DB_PATH` at it.
maxminddb = "0.28"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
argon2 = "0.5"
rand = "0.8"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
regex = "1.12.3"
once_cell = "1.19"
# Phase 27 sub-D: outbound webhook delivery. rustls-tls so we don't
# pull a system OpenSSL into the prod image.
# `http2` is required for APNs (v2.7 push series): Apple's v2 API only
# accepts HTTP/2; with the feature off reqwest's ALPN offers http/1.1
# only and APNs resets the connection. The other reqwest consumers
# (webhooks, FCM v1, HCM, MiPush, web push, cert_monitor, endpoint_probe)
# tolerate HTTP/1.1 — enabling h2 is strictly additive for them.
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "http2", "form", "query"] }
# Phase 42 sub-C.02: async traits with dynamic dispatch (`Arc<dyn ...>`)
# need this crate's macro; Rust stable's native async-fn-in-trait is
# fine for static dispatch but the AttachmentStore is held as a
# trait object so we use async_trait.
async-trait = "0.1"
# Phase 43 sub-A.04: percent-encode OAuth redirect / state in the
# Linear authorise URL builder. Tiny crate, no transitive deps.
urlencoding = "2"
# v1.2 W3 — native source-bundle archive (tar.gz). flate2 + tar are
# the same pair the rest of the Rust ecosystem uses; safe pure-Rust,
# no system zlib link.
flate2 = "1"
tar = "0.4"
# v1.3 W13 — GitHub App auth needs an RSA-SHA256 JWT to exchange
# for an installation access token. `jsonwebtoken` is the standard
# crate. v10 made the crypto backend pluggable: one of `rust_crypto`
# or `aws_lc_rs` must be enabled or the first sign call panics with
# "Could not automatically determine the process-level CryptoProvider".
# `rust_crypto` keeps us on the pure-Rust stack (same family as
# `aes-gcm` / `p256` used in `secrets.rs` and the webpush provider).
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
# v2.7 W1 — application-level secret encryption layer (`src/secrets.rs`).
# AES-256-GCM is FIPS-compatible, hardware-accelerated on every modern
# CPU, and a tiny pure-Rust dep with no system OpenSSL pull-in. First
# user: push provider credentials (APNs p8, FCM service-account JSON).
# hkdf derives the per-instance master key from SENTORI_SESSION_SECRET
# so a single shared secret bootstraps both session signing and
# secret sealing.
aes-gcm = "0.10"
hkdf = "0.12"
# v2.8 W1 — P-256 ECDH for Web Push RFC 8291 payload encryption.
# Pure Rust (RustCrypto); no OpenSSL pull-in. ECDH gives the
# shared secret between our ephemeral key and the browser's
# subscription p256dh; HKDF + AES-GCM (above) do the rest.
p256 = { version = "0.13", features = ["ecdh", "arithmetic"] }
# v2.8 — base64url encoding/decoding for VAPID `k=` header and the
# Web Push subscription's `p256dh` / `auth` fields. URL-safe alphabet
# without padding per the spec.
base64 = "0.22"

[dev-dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "query"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }
tempfile = "3"
# v0.4 CI fix: alert_rules_eval tests share one Postgres DB. When cargo
# test runs them in parallel, sweep_once from test A claims rule_B's
# throttle window before test B's sweep can. Serialize the three tests
# to avoid that race; production code is not affected.
serial_test = "3"
# v1.1 P4: property tests for trust-score math invariants.
proptest = "1"
# v1.1 audit-closeout C: regression-test the trust-score WebAssembly
# kernel at `wasm/score/`. The 433-byte artifact in `web/public/wasm/`
# is committed; this dep lets us load it from a server test and
# assert the math stays correct across Rust toolchain bumps.
wasmtime = "39"
