# saas/server — Sentori SaaS control plane axum binary.
#
# Control plane only — does NOT serve tenant workload (that's
# self-hosted/server/ pointed at the tenant's DB). This binary
# handles:
#   - signup / login (saasadmin)
#   - tenant CRUD + provisioning
#   - Stripe webhook ingest (uses S5 stone)
#   - cross-tenant health dashboard
#
# Per CSaas1+5 autonomous design 2026-06-21.
# Standalone Cargo workspace so docker layer builds it
# without dragging core/ test fixtures.

[workspace]

[package]
name = "sentori-saas-server"
version = "0.1.0"
edition = "2024"
authors = ["GOLIA K.K. <takagi@golia.jp>"]
license = "Apache-2.0 OR MIT"
publish = false
rust-version = "1.88"
description = "Sentori SaaS control-plane axum server — tenant provisioning + billing webhooks + saasadmin dashboard."

[[bin]]
name = "sentori-saas"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"

[dependencies]
# S5 Stripe webhook verifier (already in core/).
sentori-stripe-webhook-verify = { path = "../../core/crates/stripe-webhook-verify" }
sentori-argon2-password       = { path = "../../core/crates/argon2-password" }
sentori-cookie-session        = { path = "../../core/crates/cookie-session" }

axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "tower-log", "tracing", "macros"] }
axum-extra = { version = "0.10", default-features = false, features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "time", "json", "migrate"] }
uuid = { version = "1", features = ["v7", "serde"] }
time = { version = "0.3", features = ["serde-well-known", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
http = "1"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
